--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/message" />
+        android:text="@string/message"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
