--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -13,5 +13,27 @@
         android:layout_centerInParent="true"
         android:textAlignment="center"
         android:textColor="#F44336"/>
+    
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true">
+
+
+        <ImageButton
+            android:id="@+id/imgCustomFAB"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/circle_2"
+            android:src="@drawable/ic_rock_and_roll"
+            android:elevation="4dp"
+            android:layout_gravity="right|bottom"/>
+
+
+    </FrameLayout>
+
 
 </RelativeLayout>
